# scientific-protocol

./: .dockerignore  .env.example  .gas-snapshot  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.local  LICENSE  README.md  SECURITY.md  biome.json  docker-compose.local.yml  foundry.toml  hardhat.config.ts  package-lock.json  package.json  slither.config.json  tsconfig.json  tsconfig.package.json  tsconfig.service.json
contracts/: AccessController.sol  AgentRegistry.sol  AppealsRegistry.sol  ArtifactRegistry.sol  BondEscrow.sol  ClaimRegistry.sol  ClaimRewardVault.sol  EpistemicMarket.sol  ProtocolGovernanceToken.sol  ProtocolGovernor.sol  ProtocolParameters.sol  ProtocolTimelock.sol  ProtocolTreasury.sol  ReplicationRegistry.sol  ReputationCheckpointRegistry.sol  ResolutionModuleRegistry.sol
docs/: agent-artifact-maintenance.md  agent-consensus-review.md  artifact-ingestion.md  claim-publication-bond-flow.md  claim-work-graph.md  current-state.md  interaction-map.md  protocol-governance.md  read-model-reorg-recovery.md  reference-service.md  release.md  roadmap.md  run-your-own-gateway.md  security-review.md  subgraph.md  unified-rewards.md  user-run-review-agents.md  user-run-work-agents.md
foundry-test/: MarketInvariant.t.sol  ProtocolFuzz.t.sol  ProtocolInvariant.t.sol  RewardsInvariant.t.sol
ops/: release-allowed-signers
python/: README.md  pyproject.toml  scientific_protocol.py  scientific_protocol_client.py
python/examples/: verify_webhook_receiver.py
schemas/: artifact-storage-attestation.schema.json  artifact-storage-bundle.schema.json  claim.schema.json  evaluation.schema.json  forecast.schema.json  openapi.yaml  replication.schema.json
script/: deploy-protocol.ts  dispatch-agent-webhooks.ts  generate-contract-artifacts.ts  generate-subgraph-assets.ts  init-node22-env.sh  prepare-artifact-storage-bundle.ts  rebuild-read-model-fresh.ts  record-artifact-storage-attestation.ts  (+6 more)
(+261 files in other folders)
